# hydragen

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chemquest.db  chemquest_secrets.py.secret  create_db.py  create_sample_db.py  elo.py  init_vars.py  mcq_generator.py  molecules_msdata.json  mongo_address.py.secret  package.json  pyproject.toml
.gitsecret/keys/: pubring.gpg  trustdb.gpg
.gitsecret/paths/: mapping.cfg
chemquest_website/: __init__.py  chemquest_config_SAMPLE.toml  chemquest_secrets.py.secret  elo.py
chemquest_website/helpers/: chemical_transformation.py  elo.py  funcgroup_transformations.md  funcgroups.py  mcq_generator.py
chemquest_website/routes/: __init__.py  current_user.py  edit_profile.py  generate_mcq.py  get_audio.py  get_csrf_token.py  get_hints.py  get_identity.py  get_leaderboard.py  get_ms_data.py  get_profile.py  get_site_statistics.py  index.py  login.py  logout.py  record_attempt.py  signup.py
chemquest_website/static/: package.json
chemquest_website/static/audio/: README.txt
chemquest_website/static/css/: style.css
chemquest_website/static/css/views/: home.css  landing.css  leaderboard.css  login.css  profile.css  ptableSidebar.css  settings.css  signup.css
chemquest_website/static/scss/: style.scss
chemquest_website/static/scss/views/: home.scss  landing.scss  profile.scss  tour.scss
chemquest_website/static/src/: index.js
chemquest_website/static/src/components/: audioPlayer.js  countryInput.js  navbar.js  (+2 more)
chemquest_website/templates/: index.html
static/: package-lock.json  package.json  webpack.config.js
static/css/: style.css
static/css/views/: home.css  landing.css  signup.css
static/src/: index.js
static/src/components/: navbar.js
static/src/views/: chartTest.js  home.js  landing.js  legacy.js  login.js  mcq.js  signup.js
templates/: index.html
(+21 files in other folders)
