[tool.poetry]
name = "chemquest-mithril"
version = "0.2.1"
description = "An automatic question generator for organic chemistry."
authors = ["Charles <charliewindle@gmail.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
Flask-JWT-Extended = "^4.4.4"
Flask-SeaSurf = "^1.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
