[tool.poetry]
name = "chemquest_website"
version = "0.3.0"
description = "An automatic question generator for organic chemistry."
authors = ["Charles <charliewindle@gmail.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
Flask-JWT-Extended = "^4.4.4"
Flask-SeaSurf = "^1.1.1"
Flask-Mail = "^0.9.1"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
rdkit = "^2023.3.3"
python-box = "^7.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
